2011-03-28  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/avtdemo:
	commands avatarname, ballooncolor, textcolor improved

2011-03-27  Andreas K. Foerster  <info@akfoerster.de>

	* avttermsys.c (avta_term_initialize):
	don't define environment variable AKFAVTTERM anymore

	* avtcmd: adapted to lua-akfavatar

2011-03-25  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_newline_mode): new function

	* filechooser.c (avta_file_selection): activate the newline mode

	* lua/lua-avt.c (lavt_long_menu): activate the newline mode

2011-03-24  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-term.c (lterm_setenv, lterm_unsetenv): new functions
	lua/terminal.lua: adapted

	* lua/akfavatar-term.c (lterm_execute): setlocale

	* lua/akfavatar-term.c (APC_command): convert cmd to current encoding

	* lua/akfavatar-term.en.about: preliminary documentation

2011-03-22  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/avtdemo.lua (wait, do_wait): new function/variable

	* avtgrmsg.c (avta_graphic_error): fix: unlock updates

	* lua/akfavatar-term.c (lterm_execute, APC_command, luaopen_term):
	register APC command handler for Lua commands

	* avtterm.c (avta_term_update_size): first check if size changed at all

	* avtterm.c (avta_term_send): check file-handle

	* lua/akfavatar-term.c (lterm_send, lterm_decide): new functions

2011-03-07  Andreas K. Foerster  <info@akfoerster.de>

	* avtreadfile.c (read_stream): fix reading empty files

2011-03-06  Andreas K. Foerster  <info@akfoerster.de>

	* doc/lua-akfavatar-reference.man: new file

	* stb_vorbis.c: make it compile on FreeBSD

2011-03-03  Andreas K. Foerster  <info@akfoerster.de>

	* avtvorbis.c [MAX_CHANNELS]: new macro

2011-03-02  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_entry_type => avt.entry_type):
	new function

	* lua-akfavatar-prg.c: can display *.about files (UTF-8)

2011-03-01  Andreas K. Foerster  <info@akfoerster.de>
