@@ -1,4 +1,4 @@
-#! ./avatarsay
+#!/usr/bin/env lua-akfavatar
 
 # my hebrew isn't good enough. Could anybody please translate the rest.
 
@@ -8,20 +8,15 @@
 [avatarimage gnu-head.xpm]
 
 [right-to-left]
-[size 3, 48]
 "תוכנה חופשית" זה ענײן של חירות, לא של מחיר. כדי
 להבין את העקרון, צריך לחשוב על "חופש" כמו 
-ב"חופש הביטוי"...
-[effectpause]
-[back 3  ולא כמו ב"בירה חופשי".]
+ב"חופש הביטוי" ולא כמו ב"בירה חופשי".
 -----------------------------------------------------------------------
-[size 4, 46]
 תוכנה חופשית נוגעת לחופש של משתמשים להריץ, 
 להפיץ הפצת-המשך, ללמוד, לשנות ולשפר את התוכנה.
 ליתר דיוק, זה מתײחס לארבעה סוגים של חירות 
 למשתמשי התוכנה:
 ------------------------------------------------------------------------------
-[size 8, 52]
 0. החופש להריץ את התוכנה, לכל מטרה שהיא.
 1. החופש ללמוד איך תוכנה עובדת, ולשנות אותה לצרכיהם.
    גישה לקוד המקור היא תנאי מקדים לכך.
@@ -32,13 +27,11 @@
    גישה לקוד-המקור היא תנאי מקדים לכך.
 ------------------------------------------------------------------------------
 [left-to-right]
-[size 5, 52]
 The concept of these 4 freedoms (0-3) were developed
 by Richard Stallman.
 
 To set a good example he started to write a 
 completely free operating system.
 -----------------------------------------------------------------------
-[size 2, 41]
 Today Linux based GNU systems are used by
 millions of people around the world.
